--- a/AsynchronousCodePractice/my-express-app/package.json
+++ b/AsynchronousCodePractice/my-express-app/package.json
@@ -2,10 +2,10 @@
   "name": "my-express-app",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev":"nodemon server.js"
+    "start": "node src/server.js",
+    "dev":"nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
