--- a/AsynchronousCodePractice/my-express-app/package.json
+++ b/AsynchronousCodePractice/my-express-app/package.json
@@ -5,14 +5,15 @@
   "main": "server.js",
   "scripts": {
     "start": "node src/server.js",
-    "dev":"nodemon src/server.js"
+    "dev": "nodemon src/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "validator": "^13.15.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
