--- a/AsynchronousCodePractice/my-express-app/package.json
+++ b/AsynchronousCodePractice/my-express-app/package.json
@@ -12,6 +12,8 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
     "validator": "^13.15.15"
   },
